main content and footer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		}
 
 		table {
+			width: 100%;
 			border-spacing: 0;
 		}
 
@@ -69,6 +70,8 @@
 
 		.banner {
 			width: 600px;
+			max-width: 100%;
+
 		}
 
 		.main {
@@ -109,6 +112,20 @@
 			max-width: 150px;
 		}
 
+		.footer {
+			background-color: #6F1F3A;
+			padding: 15px;
+			text-align: center;
+
+			font-size: 18px;
+			color: #FFF;
+			Margin-bottom: 13px;
+		}
+
+		.social-icon {
+			width: 30px;
+		}
+
 		@media screen and (max-width: 600px) {}
 
 		@media screen and (max-width: 400px) {}
@@ -120,7 +137,6 @@
 	<div class="wrapper">
 		<div class="webkit">
 			<table class="outer" aliFgn="center">
-				<h1>test</h1>
 				<tr>
 					<td>
 						<table>
@@ -146,6 +162,7 @@
 						<table class="main">
 							<tr>
 								<td class="three-columns">
+									<!-- First Column Puppet -->
 									<table class="column">
 										<tr>
 											<td class="padding">
@@ -173,12 +190,97 @@
 												</table>
 											</td>
 										</tr>
+									</table> <!-- First cokumn End -->
+									<!-- First column End -->
+
+									<!-- Second Column Prodigy -->
+									<table class="column">
+										<tr>
+											<td class="padding">
+												<table class="column-content">
+													<tr>
+														<td>
+															<a href="#"><img class="column-img"
+																	src="./img/prodigy-monster.png" alt=""></a>
+														</td>
+													</tr>
+													<tr>
+														<td class="column-content-paragraph">
+															<h3>Prodigy</h3>
+															<p>For kids, Prodigy is a fun video game that lets them
+																explore virtual worlds, complete quests and battle
+																friends to win exciting rewards.
+
+																For Educators, it’s a useful tool that helps them
+																reinforce math lessons and support students’ learning
+																differences. </p>
+															<a href="https://www.prodigygame.com/main-en/">Learn
+																More..</a>
+
+														</td>
+													</tr>
+												</table>
+											</td>
+										</tr>
 									</table>
+									<!-- Second column End -->
+
+									<!-- Third Column Pippet -->
+									<table class="column">
+										<tr>
+											<td class="padding">
+												<table class="column-content">
+													<tr>
+														<td>
+															<a href="#"><img class="column-img" src="./img/Pippet.png"
+																	alt=""></a>
+														</td>
+													</tr>
+													<tr>
+														<td class="column-content-paragraph">
+															<h3>Pippet</h3>
+															<p>The Puppet Master is an NPC, and the main antagonist of
+																Prodigy. At the beginning he scatters the five Warden
+																Keystones but thinks that he destroyed them. He has a
+																puppet-like assistant, called Pippet which follows his
+																orders.</p>
+															<a
+																href="https://prodigy-math-game.fandom.com/wiki/Pippet#:~:text=Pippet%20is%20a%20NPC%20(Non,of%20the%20Order%20of%20Influence.">Learn
+																More..</a>
+
+														</td>
+													</tr>
+												</table>
+											</td>
+										</tr>
+									</table>
+									<!-- Third column End -->
+
 								</td>
 							</tr>
 						</table>
 					</td>
 				</tr>
+
+				<!-- Footer	Start -->
+				<tr>
+					<td>
+						<table>
+							<tr>
+								<td class="footer">
+									<p>Connect with us</p>
+									<a href="#"><img class="social-icon" src="./img/white-facebook.png" alt=""></a>
+									<a href="#"><img class="social-icon" src="./img/white-instagram.png" alt=""></a>
+									<a href="#"><img class="social-icon" src="./img/white-linkedin.png" alt=""></a>
+									<a href="#"><img class="social-icon" src="./img/white-twitter.png" alt=""></a>
+									<a href="#"><img class="social-icon" src="./img/white-youtube.png" alt=""></a>
+
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+				<!-- Footer	 End-->
 
 			</table>
 		</div>
