Move all images to imgur, so image work in online mailbox

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
 		}
 
 		.wrapper {
-			display: flex;
-			justify-content: center;
 			width: 100%;
 			table-layout: fixed;
 			background-color: #f6f9fc;
@@ -59,9 +57,9 @@
 		}
 
 		.innertable {
-			background-color: hsl(209, 69%, 54%);
+			background-color: #FFF;
 			padding: 10px;
-			text-align: center;
+			text-align: left;
 		}
 
 		.logo {
@@ -112,6 +110,7 @@
 			max-width: 150px;
 		}
 
+
 		.footer {
 			background-color: #6F1F3A;
 			padding: 15px;
@@ -126,15 +125,30 @@
 			width: 30px;
 		}
 
-		@media screen and (max-width: 600px) {}
+		@media screen and (max-width: 600px) {
+			img.third-last-img {
+				width: 200px !important;
+				max-width: 200px !important;
+			}
 
-		@media screen and (max-width: 400px) {}
+			.padding {
+				padding-right: 0 !important;
+				padding-left: 0 !important;
+			}
+		}
+
+		@media screen and (max-width: 400px) {
+			img.third-img {
+				width: 200px !important;
+				max-width: 200px !important;
+			}
+		}
 	</style>
 </head>
 
 <body>
 
-	<div class="wrapper">
+	<center class="wrapper">
 		<div class="webkit">
 			<table class="outer" aliFgn="center">
 				<tr>
@@ -142,8 +156,8 @@
 						<table>
 							<tr>
 								<td class="innertable">
-									<a href=""><img class="logo" src="./img/prodigy-logo.png" alt="Prodigy logo"
-											title="logo"></a>
+									<a href=""><img class="logo" src="https://i.imgur.com/uFDjTnN.png"
+											alt="Prodigy logo" title="logo"></a>
 								</td>
 							</tr>
 						</table>
@@ -152,7 +166,7 @@
 
 				<tr>
 					<td>
-						<a href="https://www.prodigygame.com/"><img class="banner" src="./img/banner.png"
+						<a href="https://www.prodigygame.com/"><img class="banner" src="https://i.imgur.com/HpjKNUr.png"
 								alt="Banner"></a>
 					</td>
 				</tr>
@@ -169,8 +183,8 @@
 												<table class="column-content">
 													<tr>
 														<td>
-															<a href="#"><img class="column-img" src="./img/Puppet.png"
-																	alt=""></a>
+															<a href="#"><img class="column-img third-img"
+																	src="https://i.imgur.com/Xw1iLVt.png" alt=""></a>
 														</td>
 													</tr>
 													<tr>
@@ -181,7 +195,7 @@
 																Keystones but thinks that he destroyed them. He has a
 																puppet-like assistant, called Pippet which follows his
 																orders.</p>
-															<a
+															<a target="_blank"
 																href="https://prodigy-math-game.fandom.com/wiki/The_Puppet_Master#:~:text=The%20Puppet%20Master%20is%20an,Pippet%20which%20follows%20his%20orders.">Learn
 																More..</a>
 
@@ -200,8 +214,9 @@
 												<table class="column-content">
 													<tr>
 														<td>
-															<a href="#"><img class="column-img"
-																	src="./img/prodigy-monster.png" alt=""></a>
+															<a target="_blank" href="#"><img
+																	class="column-img third-img"
+																	src="https://i.imgur.com/BTpYbgN.png" alt=""></a>
 														</td>
 													</tr>
 													<tr>
@@ -214,7 +229,8 @@
 																For Educators, it’s a useful tool that helps them
 																reinforce math lessons and support students’ learning
 																differences. </p>
-															<a href="https://www.prodigygame.com/main-en/">Learn
+															<a target="_blank"
+																href="https://www.prodigygame.com/main-en/">Learn
 																More..</a>
 
 														</td>
@@ -232,8 +248,8 @@
 												<table class="column-content">
 													<tr>
 														<td>
-															<a href="#"><img class="column-img" src="./img/Pippet.png"
-																	alt=""></a>
+															<a href="#"><img class="column-img third-last-img"
+																	src="https://i.imgur.com/SnMQoXG.png" alt=""></a>
 														</td>
 													</tr>
 													<tr>
@@ -244,7 +260,7 @@
 																Keystones but thinks that he destroyed them. He has a
 																puppet-like assistant, called Pippet which follows his
 																orders.</p>
-															<a
+															<a target="_blank"
 																href="https://prodigy-math-game.fandom.com/wiki/Pippet#:~:text=Pippet%20is%20a%20NPC%20(Non,of%20the%20Order%20of%20Influence.">Learn
 																More..</a>
 
@@ -269,11 +285,16 @@
 							<tr>
 								<td class="footer">
 									<p>Connect with us</p>
-									<a href="#"><img class="social-icon" src="./img/white-facebook.png" alt=""></a>
-									<a href="#"><img class="social-icon" src="./img/white-instagram.png" alt=""></a>
-									<a href="#"><img class="social-icon" src="./img/white-linkedin.png" alt=""></a>
-									<a href="#"><img class="social-icon" src="./img/white-twitter.png" alt=""></a>
-									<a href="#"><img class="social-icon" src="./img/white-youtube.png" alt=""></a>
+									<a href="#"><img class="social-icon" src="https://i.imgur.com/Zy6Y5tl.png"
+											alt=""></a>
+									<a href="#"><img class="social-icon" src="https://i.imgur.com/AEkms2N.png"
+											alt=""></a>
+									<a href="#"><img class="social-icon" src="https://i.imgur.com/pR5zy9i.png"
+											alt=""></a>
+									<a href="#"><img class="social-icon" src="https://i.imgur.com/aoouVDS.png"
+											alt=""></a>
+									<a href="#"><img class="social-icon" src="https://i.imgur.com/VWSWoIm.png"
+											alt=""></a>
 
 								</td>
 							</tr>
@@ -284,7 +305,7 @@
 
 			</table>
 		</div>
-	</div>
+	</center>
 </body>
 
 </html>
